[package]
name = "approxy"
version = "0.1.0"
edition = "2021"
authors = ["Tim Akinbo <takinbo@timbaobjects.com>"]
description = "Apollo proxy for NGtrend"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
reqwest = "0.12"
tokio = { version = "1.18", features = ["full"] }
warp = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
